[package]
name = "oxidize_the_moon"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
futures = { version = "0.3.30", features = ["executor"] }
futures-util = { version = "0.3.30", features = ["tokio-io"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-tungstenite = "0.14.0"
hyper-util = { version = "0.1.7", features = ["tokio", "full"] }
ndarray = { version = "0.16.1", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
